--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
 
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
-  <hgroup>
-    <h2>Introduction</h2>
-  </hgroup>
   <article data-timings="">
-    <ul>
+    <style>
+strong {
+  font-weight: bold;
+}
+</style>
+
+<h2>Introduction</h2>
+
+<ul>
 <li><p>Have you been offered a job in London or thinking of moving there?  </p></li>
 <li><p>Wondering if you can afford it or if the commute will be too long?</p></li>
 <li><p>Well this app combines API data from the property site <a href="http://www.zoopla.co.uk">zoopla.co.uk</a> and Google Maps to help you quickly find and explore the ideal suburb that balances rental prices with commuting transit times.</p></li>
@@ -68,39 +73,39 @@
     <p><img style="float:right; margin:0px 20px 0px 20px;" src="rentpanel.png" height="500px"/></p>
 
 <ul>
-<li><p>We only consider rental accomodation and the options available to you are: area interested in, search radius, price range, property type, and the number of bedrooms. </p></li>
-<li><p>The default location is &#39;Watford, England&#39;, but this can of course be changed to any area/town/village/postcode within the UK. </p></li>
+<li><p>We only consider rental accomodation with options such as: area interested in, search radius, price range, property type, and the number of bedrooms, availble to you.</p></li>
+<li><p>We have set the default location to &#39;Watford, England&#39; as a demo,  but this can of course be changed to any area/town/village/postcode within the UK. [N.B. We use Google geocode API to try and return an accurate address]</p></li>
 <li><p>Once you&#39;re ready, just click on <code>Fetch Properties</code> buttons to display your results.</p></li>
+<li><p>The app should warn you if no properties have been found within your search criterion. This usually means you should increase your search radius and/or your maximum price threshold.</p></li>
 </ul>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="codefont outfont.css" id="slide-3" style="background:;">
+<slide class="codefont" id="slide-3" style="background:;">
   <hgroup>
     <h2>Property Results</h2>
   </hgroup>
   <article data-timings="">
-    <p><img style="float:right; margin:130px 20px 0px 20px;" src="rentresults.png" width="450px"/></p>
+    <p><img style="float:right; margin:90px 10px 0px 20px;" src="rentresults.png" width="500px"/></p>
 
 <pre><code class="r">require(googleVis)
 load(&quot;stations.Rda&quot;)
-M&lt;-gvisMap(df, &quot;link&quot; , &quot;propertylink&quot;, options=list(showTip=TRUE,
-                        enableScrollWheel=TRUE,mapType=&#39;normal&#39;,width=450, height=270))
+M&lt;-gvisMap(df, &quot;link&quot; , &quot;propertylink&quot;, options=list(showTip=TRUE,enableScrollWheel=TRUE,mapType=&#39;normal&#39;,width=450, height=270))
 print(M,&quot;chart&quot;)
 </code></pre>
 
 <!-- Map generated in R 3.2.1 by googleVis 0.5.10 package -->
 
-<!-- Wed Dec 23 10:03:59 2015 -->
+<!-- Wed Dec 23 16:55:02 2015 -->
 
 <!-- jsHeader -->
 
 <script type="text/javascript">
  
 // jsData 
-function gvisDataMapID34ca2e97a6c3 () {
+function gvisDataMapID34ca72bea2e8 () {
 var data = new google.visualization.DataTable();
 var datajson =
 [
@@ -453,8 +458,8 @@ return(data);
 }
  
 // jsDrawChart
-function drawChartMapID34ca2e97a6c3() {
-var data = gvisDataMapID34ca2e97a6c3();
+function drawChartMapID34ca72bea2e8() {
+var data = gvisDataMapID34ca72bea2e8();
 var options = {};
 options["showTip"] = true;
 options["enableScrollWheel"] = true;
@@ -463,7 +468,7 @@ options["width"] =    450;
 options["height"] =    270;
 
     var chart = new google.visualization.Map(
-    document.getElementById('MapID34ca2e97a6c3')
+    document.getElementById('MapID34ca72bea2e8')
     );
     chart.draw(data,options);
     
@@ -487,9 +492,9 @@ if (newPackage)
   pkgs.push(chartid);
   
 // Add the drawChart function to the global list of callbacks
-callbacks.push(drawChartMapID34ca2e97a6c3);
+callbacks.push(drawChartMapID34ca72bea2e8);
 })();
-function displayChartMapID34ca2e97a6c3() {
+function displayChartMapID34ca72bea2e8() {
   var pkgs = window.__gvisPackages = window.__gvisPackages || [];
   var callbacks = window.__gvisCallbacks = window.__gvisCallbacks || [];
   window.clearTimeout(window.__gvisLoad);
@@ -515,19 +520,18 @@ callbacks.shift()();
 
 <!-- jsChart -->  
 
-<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartMapID34ca2e97a6c3"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi?callback=displayChartMapID34ca72bea2e8"></script>
  
 
 <!-- divChart -->
 
-<div id="MapID34ca2e97a6c3" 
+<div id="MapID34ca72bea2e8" 
   style="width: 450; height: 270;">
 </div>
 
 <ul>
-<li><p>Returns up to 100 properties from <a href="http://www.zoopla.co.uk">zoopla</a>. </p></li>
-<li><p>We compute the average and median prices  and show the distributions.</p></li>
-<li><p>And use the <code>googleVis</code> library to show the locations of each property. Click on one of the properties in the above Google Map. [<strong>note: Refresh browser if map is not showing</strong>]</p></li>
+<li><p>Returns up to 100 properties from <a href="http://www.zoopla.co.uk">zoopla</a> and we compute the average and median prices  and show the distributions.</p></li>
+<li><p>The <code>googleVis</code> library shows the locations of each property. Click on one of the properties in the above map. [<strong>note: refresh your browser if map above  is not displaying properly.</strong>]</p></li>
 </ul>
 
   </article>
@@ -542,12 +546,11 @@ callbacks.shift()();
     <p><img style="float:left; margin:0px 20px 0px 20px;" src="transit.png" height="400px"/></p>
 
 <ul>
-<li><p>Once you are happy with your property results, the app will take your entered location and use it to compute train transit times via Google Maps API. </p></li>
+<li><p>Once you are happy with your property results, the app will take your entered location and use it for computing train transit times via Google Maps API. </p></li>
 <li><p>Simply enter your desired destination  e.g. this might be the place of work. </p></li>
-<li><p>Then, enter a search radius </p></li>
-<li><p>And finally a departure time. Default is set to roughly a rush hour time and the date set to todays.</p></li>
-<li><p>The app will then return a list of stations within yoru search radius followed by transit times.</p></li>
-<li><p>Future versions of this app will include a lot more information such as: monthly commuting costs, and other outgoings set against your salary.</p></li>
+<li><p>Enter a search radius and finally select a departure time. Default is set to roughly a rush hour time with the date always set to &#39;todays&#39; date.</p></li>
+<li><p>The app will then return a list of stations within your search radius followed by transit times.</p></li>
+<li><p>Future versions of this app will include a lot more information such as: monthly commuting costs, and other outgoings which you can set against your expected salary.</p></li>
 </ul>
 
   </article>
@@ -560,7 +563,7 @@ callbacks.shift()();
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Introduction'>
+        data-slide=1 title='NA'>
          1
       </a>
     </li>
